--- a/CLEAN.ipynb
+++ b/CLEAN.ipynb
@@ -2896,6 +2896,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adb29a29-beda-429e-8bb0-915643da710a",
+   "metadata": {},
+   "source": [
+    " Création de la variable \"evolution du solde sur les derniers 3 mois\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c26932d-5bfb-414f-b18a-e02c543ae6a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evolution(compte):\n",
+    "    transactions_compte = transactions_segmentées[transactions_segmentées['id_bank_account'] == compte]\n",
+    "    df=transactions_compte[\n",
+    "            (transactions_compte['date']<(max(transactions_compte['date'])- datetime.timedelta(360)))]\n",
+    "    \n",
+    "    account=accounts_segmentées[accounts['id_bank_account']==compte]\n",
+    "    solde_ini=account['balance'].iloc[0]\n",
+    "    for trans in df['amount']:\n",
+    "        solde_ini-=trans\n",
+    "    return account['balance'].iloc[0]-solde_ini\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6903be63-1d3a-4d10-b75d-c51ba11fd87e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "account_segmentées.loc[:, 'evolution_sur_3M'] = account_segmentées['new_id'].apply(evolution)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "001240c3-5b58-42b2-bdb6-6bba5cadc095",
@@ -3868,9 +3906,7 @@
   {
    "cell_type": "markdown",
    "id": "4a7b2d59-7479-46e0-bc5f-f65dc36b40b0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Test "
    ]
