--- a/MODELE.ipynb
+++ b/MODELE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "id": "8f4a8b97-771f-4087-904a-be92a1b57bfd",
    "metadata": {},
    "outputs": [],
@@ -22,17 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "680bde79-5b05-4fc6-bf64-100306c0480e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(\"Données.csv\")"
+    "df=pd.read_csv(\"Data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3cee69af-1ebf-44ea-bca1-b7b08e5aeb26",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "[3984 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9647d988-b090-4a13-b8a6-975fa681c70b",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "bd4e7cf7-e637-4494-9095-1ee8623c288d",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "5b056ada-0b9c-4268-8be3-c6b0aac0aa67",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "d6aaf155-93bc-44d8-93ce-83ae07f26884",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "36b20dc1-12e9-451d-82ef-e772d61de41e",
    "metadata": {},
    "outputs": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "a89e2bbc-778a-4964-84a0-c5e30d9175e1",
    "metadata": {
     "scrolled": true
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "e1db20a0-023f-4325-a3e3-0c9c9bed7e66",
    "metadata": {
     "scrolled": true
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "5346e550-080b-404e-aa6a-b1e1760ccbf3",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "03d9548b-f38f-4cfc-b11e-16a35e760d8c",
    "metadata": {},
    "outputs": [
